...
    
    var body: some View {
        VStack(spacing: 25.0) {
            Text("Hello \(authenticator.savedUsername ?? "World")")
                .font(.title)
                .padding()
                .accessibility(identifier: "greeting")
            CustomButton(title: "ButtonTitle") {}
                .buttonStyle(CustomButtonStyle(
                                foregroundColor: .red,
                                backgroundColor: .yellow,
                                isDisabled: false))
            
...
